# amazon_shoping_assistant_agent

./: .gitignore  Makefile  pyproject.toml
apps/api/: pyproject.toml
apps/chatbot_ui/: pyproject.toml
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: explore_amazon_dataset.ipynb
